--- a/index.html
+++ b/index.html
@@ -8,22 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-
-    <header>
-        <div class="left">
-            <h1>logo</h1>
-            <a href="">Home</a>
-            <a href="">About us</a>
-        </div>
-        <div class="right">
-            <div class="round"></div>
-            <div class="round"></div>
-            <div class="round"></div>
-            <div class="round"></div>
-        </div>
-    </header>
-
-
+    <header></header>
+    
     <script src="./index.js"></script>
+    <script src="./modules/layout.js"></script>
 </body>
 </html>
