added footer and arr

--- a/index.html
+++ b/index.html
@@ -9,6 +9,46 @@
 </head>
 <body>
     <header></header>
+
+    <footer>
+        <div class="foot-head">
+            <img src="./public/icons/logo_white.svg">
+            <button class="map">Карта магазинов</button>
+        </div>
+        <div class="foot-mid">
+            <div class="first-box box">
+                <p>Покупателям</p>
+            </div>
+            <div class="second-box box">
+                <p>Бизнесу</p>
+            </div>
+            <div class="third-box box">
+                <p>О компании</p>
+            </div>
+            <div class="fourth-box box">
+                <p>Блог</p>
+            </div>
+            <div class="fifth-box box">
+                <p>Обратная связь</p>
+            </div>
+        </div>
+        <div class="download">
+            <div class="left-download">
+                <p>Скачайте мобильное приложение</p>
+                <div class="stores">
+                    <img src="./public/icons/google play.png" alt="">
+                    <img src="./public/icons/appstore.svg" alt="">
+                    <img src="./public/icons/rustore.svg" alt="">
+                    <img src="./public/icons/ag-logo.png" alt="">
+                </div>
+            </div>
+        </div>
+
+        <div class="foot-bot">
+            <p>Copyright М.Видео</p>
+            <p>Официальная информация Раскрытие информации</p>
+        </div>
+    </footer>
     
     <script src="./index.js"></script>
     <script src="./modules/layout.js"></script>
