--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
     <header></header>
 
+    <main>
+        
+    </main>
+
+
     <footer>
         <div class="foot-head">
             <img src="./public/icons/logo_white.svg">
