--- a/black friday/index.html
+++ b/black friday/index.html
@@ -71,8 +71,8 @@
         </div>
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
-              <div class="swiper-slide img1">Slide 1</div>
-              <div class="swiper-slide img2">Slide 2</div>
+              <div class="swiper-slide img1"></div>
+              <div class="swiper-slide img2"></div>
             </div>
             <div class="swiper-pagination"></div>
           </div>
