--- a/productid.html
+++ b/productid.html
@@ -9,11 +9,7 @@
 </head>
 <body>
     
-    <header>
-
-    </header>
-
-
+    <header></header>
     <main>
         <div class="product">
             <img class="productImg">
@@ -22,14 +18,7 @@
                 <img src="./public/icons/info.png" alt="">
             </div>
         </div>
-
-
     </main>
-
-
-
-
-
 
     <footer>
         <div class="foot-head">
