--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
         <p>Официальная информация Раскрытие информации</p>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./modules/layout.js"></script>
-    <script src="./index.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script type="module" src="./modules/layout.js"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
