--- a/index.html
+++ b/index.html
@@ -11,75 +11,235 @@
     <header></header>
 
     <main>
-        <div class="products">
-            
-        </div>
-   
- <div class="marat">
+      <div class="products"></div>
+      <div class="marat">
         <p class="p1">Популярные бренды</p>
         <div class="blocks_1">
           <div class="block">
-            <img class="top_img" src="./public/mi.jpg" alt="" />
-            <img src="./public/samsung.jpg" alt="" />
+            <a href="">
+              <div class="grey_block">
+                <img
+                  class="top_img"
+                  src="./public/free-icon-xiaomi-882720.png"
+                  alt=""
+                  width="40px"
+                  height="40px"
+                />
+              </div>
+            </a>
+            <a href="">
+              <div class="grey_block">
+                <img src="./public/free-icon-samsung-5969116.png" alt="" />
+              </div>
+            </a>
           </div>
           <div class="block">
-            <img class="top_img" src="./public/Hisen.jpg" alt="" />
-            <img src="./public/Huawei.jpg" alt="" />
+            <a href="">
+              <div class="grey_block">
+                <img
+                  class="top_img"
+                  src="./public/apple.png"
+                  alt=""
+                  width="40px"
+                  height="40px"
+                />
+              </div>
+            </a>
+            <a href="">
+              <div class="grey_block">
+                <img
+                  src="./public/free-icon-huawei-5969073.png"
+                  alt=""
+                  width="40px"
+                  height="40px"
+                />
+              </div>
+            </a>
           </div>
           <div class="block">
-            <img class="top_img" src="./public/mi.jpg" alt="" />
-            <img src="./public/samsung.jpg" alt="" />
+            <a href="">
+              <div class="grey_block">
+                <img
+                  class="top_img"
+                  src="./public/adidas.png"
+                  alt=""
+                  width="40px"
+                  height="40px"
+                />
+              </div>
+            </a>
+            <a href="">
+              <div class="grey_block">
+                <img
+                  src="./public/nike.png"
+                  alt=""
+                  width="40px"
+                  height="40px"
+                />
+              </div>
+            </a>
           </div>
           <div class="block">
-            <img class="top_img" src="./public/Hisen.jpg" alt="" />
-            <img src="./public/Huawei.jpg" alt="" />
+            <a href="">
+              <div class="grey_block">
+                <img
+                  class="top_img"
+                  src="./public/lg.png"
+                  alt=""
+                  width="45px"
+                  height="45px"
+                />
+              </div>
+            </a>
+            <a href="">
+              <div class="grey_block">
+                <img src="./public/hp.png" alt="" width="40px" height="40px" />
+              </div>
+            </a>
           </div>
           <div class="block">
-            <img class="top_img" src="./public/mi.jpg" alt="" />
-            <img src="./public/samsung.jpg" alt="" />
+            <a href="">
+              <div class="grey_block">
+                <img class="top_img" src="./public/nokia.png" alt="" />
+              </div>
+            </a>
+            <a href="">
+              <div class="grey_block">
+                <img src="./public/oppo.png" alt="" />
+              </div>
+            </a>
           </div>
         </div>
         <p class="p1">Наши преимущества</p>
         <div class="blocks_2">
           <div class="block">
-            <div class="top">
-              <img class="top_img" src="./public/mi.jpg" alt="" />
-              <p class="p2">Удобная доставка</p>
-            </div>
-            <div class="bot">
-              <img class="top_img" src="./public/mi.jpg" alt="" />
-              <p class="p2">Гарантия лучшей цены</p>
-            </div>
+            <a href="" class="lin">
+              <div class="top">
+                <img
+                  class="top_img"
+                  src="./public/setting.png"
+                  alt=""
+                  width="35px"
+                  height="35px"
+                />
+                <div class="gh">
+                  <p class="p2">Удобная доставка</p>
+                </div>
+              </div>
+            </a>
+            <a href="" class="lin">
+              <div class="bot">
+                <img
+                  class="top_img"
+                  src="./public/setting.png"
+                  alt=""
+                  width="35px"
+                  height="35px"
+                />
+                <p class="p2">Гарантия лучшей цены</p>
+              </div>
+            </a>
           </div>
           <div class="block">
-            <div class="top">
-              <img class="top_img" src="./public/mi.jpg" alt="" />
-              <p class="p2">Удобная доставка</p>
-            </div>
-            <div class="bot">
-              <img class="top_img" src="./public/mi.jpg" alt="" />
-              <p class="p2">Гарантия лучшей цены</p>
-            </div>
+            <a href="" class="lin">
+              <div class="top">
+                <img
+                  class="top_img"
+                  src="./public/setting.png"
+                  alt=""
+                  width="35px"
+                  height="35px"
+                />
+                <p class="p2">Услуги и сервисы</p>
+              </div>
+            </a>
+            <a href="" class="lin">
+              <div class="bot">
+                <img
+                  class="top_img"
+                  src="./public/setting.png"
+                  alt=""
+                  width="35px"
+                  height="35px"
+                />
+                <p class="p2">Бонусная программа M.Club</p>
+              </div>
+            </a>
           </div>
           <div class="block">
-            <div class="top">
-              <img class="top_img" src="./public/mi.jpg" alt="" />
-              <p class="p2">Удобная доставка</p>
-            </div>
-            <div class="bot">
-              <img class="top_img" src="./public/mi.jpg" alt="" />
-              <p class="p2">Гарантия лучшей цены</p>
-            </div>
+            <a href="" class="lin">
+              <div class="top">
+                <img
+                  class="top_img"
+                  src="./public/setting.png"
+                  alt=""
+                  width="35px"
+                  height="35px"
+                />
+                <p class="p2">Экспресс-доставка за 2 часа</p>
+              </div>
+            </a>
+            <a href="" class="lin">
+              <div class="bot">
+                <img
+                  class="top_img"
+                  src="./public/setting.png"
+                  alt=""
+                  width="35px"
+                  height="35px"
+                />
+                <p class="p2">Самовывоз через 15 минут</p>
+              </div>
+            </a>
           </div>
           <div class="block">
-            <div class="top">
-              <img class="top_img" src="./public/mi.jpg" alt="" />
-              <p class="p2">Удобная доставка</p>
-            </div>
-            <div class="bot">
-              <img class="top_img" src="./public/mi.jpg" alt="" />
-              <p class="p2">Гарантия лучшей цены</p>
-            </div>
+            <a href="" class="lin">
+              <div class="top">
+                <img
+                  class="top_img"
+                  src="./public/setting.png"
+                  alt=""
+                  width="35px"
+                  height="35px"
+                />
+                <p class="p2">Прием техники на переработку</p>
+              </div>
+            </a>
+            <a href="" class="lin">
+              <div class="bot">
+                <img
+                  class="top_img"
+                  src="./public/setting.png"
+                  alt=""
+                  width="35px"
+                  height="35px"
+                />
+                <p class="p2">Быстрый обмен и возврат</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="last">
+          <div class="last_left">
+            <p class="last_1">Не нашли ничего</p>
+            <p class="last_1">интересного?</p>
+            <p class="last_2">Возможно, вы найдете что-то</p>
+            <p class="last_2">среди наших акций</p>
+            <a href="" class="link_blue">
+              <p class="last_3">Все акции</p>
+            </a>
+            <img
+              src="./public/n_interesting_desktop.svg"
+              class="fon_image_left"
+            />
+          </div>
+          <div class="last_right">
+            <p class="last_1">Поулчите самые интересные</p>
+            <p class="last_1">предложения первыми!</p>
+            <form>
+              <input class="input" placeholder="Email" />
+            </form>
+            <img src="./public/subscribe.svg" class="fon_image_right" />
           </div>
         </div>
       </div>
@@ -124,8 +284,11 @@
         <p>Официальная информация Раскрытие информации</p>
       </div>
     </footer>
-    <script type="module" src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script
+      type="module"
+      src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"
+    ></script>
     <script type="module" src="./modules/layout.js"></script>
     <script type="module" src="./index.js"></script>
-</body>
+  </body>
 </html>
