timer was added

--- a/pages/black.html
+++ b/pages/black.html
@@ -34,25 +34,25 @@
                 <div class="timers">
                     <div class="dayblock">
                         <div class="blocktimer">
-                            <p class="day timer">07</p>
+                            <p id="day" class="day timer">07</p>
                         </div>
                         <p class="daytext">дней</p>
                     </div>
                     <div class="dayblock">
                         <div class="blocktimer">
-                            <p class="day timer">08</p>
+                            <p id="hours" class="day timer">08</p>
                         </div>
                         <p class="daytext">часов</p>
                     </div>
                     <div class="dayblock">
                         <div class="blocktimer">
-                            <p class="day timer">01</p>
+                            <p id="minutes" class="day timer">01</p>
                         </div>
                         <p class="daytext">минута</p>
                     </div>
                     <div class="dayblock bordernone">
                         <div class="blocktimer">
-                            <p class="day timer">25</p>
+                            <p id="seconds" class="day timer">25</p>
                         </div>
                         <p class="daytext">секунд</p>
                     </div>
@@ -92,5 +92,6 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../modules/blackFriday.js"></script>
+    <script src="../modules/timer.js"></script>
 </body>
 </html>
