--- a/productid.html
+++ b/productid.html
@@ -9,13 +9,55 @@
 </head>
 <body>
     
-    <header></header>
+    <header>
+
+    </header>
     <main>
         <div class="product">
-            <img class="productImg">
-            <div class="info">
-                <p class="title"></p>
-                <img src="./public/icons/info.png" alt="">
+            <div class="bitchsukablyat">
+                <img class="productImg">
+                <div class="info">
+                    <p class="title"></p>
+                    <img src="./public/icons/info.png" alt="">
+                </div>
+                <div class="buy">
+                    <div class="login">
+                        <p><span>Авторизуйтесь,</span>чтобы снизить цену</p>
+                    </div>
+                    <div class="price-block">
+                        <p class="priceTobuy"></p>
+                        <button class="def-btn">Добавить в корзину</button>
+                    </div>
+                    <div class="found_cheaper">Нашли дешевле?</div>
+                    <div class="cash_back">
+                        <p>Кэшбэк <span>+1 350</span> Бонусных рубрей</p>
+                    </div>
+                    <div class="credit">
+                        <p>Кредитот 4 394 ₽/мес</p>
+                        <p>Рассрочкаот 1 875 ₽/мес</p>
+                    </div>
+                    <div class="dostavka">
+                        <img src="./public/icons/dostavka.png" alt="">
+                    </div>
+                    <div class="recomindation">
+                        <div class="left_rec">
+                            <p>Услуги</p>
+                            <div>
+                                <img src="./public/icons/pecomendatsia.png" alt="">
+                            </div>
+                        </div>
+                        <div class="right_rec">
+                            <p>Аксессуары</p>
+                            <div>
+                                <img src="./public/icons/pecomendatsia.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="xar">
+                <p>Характеристики</p>          
+                <img src="./public/icons/xarakteristika.png" alt="">
             </div>
         </div>
     </main>
@@ -61,8 +103,8 @@
     </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./modules/layout.js"></script>
-    <script src="./scriptForproductpage.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script type="module" src="./modules/layout.js"></script>
+    <script type="module" src="./scriptForproductpage.js"></script>
 </body>
 </html>
