created mnogo chego

--- a/index.html
+++ b/index.html
@@ -5,13 +5,174 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
+    />
     <title>Document</title>
   </head>
   <body>
     <header></header>
-
+    <section class="section-swiper">
+        <div class="swip-custom">
+            <!-- Swiper -->
+            <div class="swiper mainSwiper">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <img src="./public/mainIMG.webp" alt="" />
+                </div>
+                <div class="swiper-slide">
+                    <img src="./public/mainIMG2.webp" alt="" />
+                </div>
+                <div class="swiper-slide">
+                    <img src="./public/mainIMG3.webp" alt="" />
+                </div>
+                <div class="swiper-slide">
+                    <img src="./public/mainIMG4.webp" alt="" />
+                </div>
+                <div class="swiper-slide">
+                    <img src="./public/mainIMG5.webp" alt="" />
+                </div>
+                <div class="swiper-slide">
+                    <img src="./public/mainIMG6.webp" alt="" />
+                </div>
+                <div class="swiper-slide">
+                    <img src="./public/mainIMG7.webp" alt="" />
+                </div>
+              </div>
+              <div class="swiper-button-next"></div>
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-pagination"></div>
+            </div>
+            <!-- Swiper JS -->
+        </div>
+    </section>
     <main>
+      <div class="shaxzod">
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="sloy2">
+                <img src="./public/perviy.png" alt="" />
+              </div>
+              <div class="sloy3">
+                <h3>Лайфхаки</h3>
+
+                <h4>
+                  Сушим обувь правильно: <br />
+                  5 проверенных способов
+                </h4>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="sloy2">
+                <img src="./public/ftoroy.jpg" alt="" />
+              </div>
+              <div class="sloy3">
+                <h3>Коротко</h3>
+
+                <h4>
+                  В Steam появился симулятор <br />
+                  альпиниста
+                </h4>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="sloy2">
+                <img src="./public/tretiy.png" alt="" />
+              </div>
+              <div class="sloy3">
+                <h3>Коротко</h3>
+
+                <h4>Технично расхламляемся: 7 <br />способов рационально ..</h4>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="sloy2">
+                <img src="./public/chetvertiy.png" alt="" />
+              </div>
+              <div class="sloy3">
+                <h3>Помогаем разобраться</h3>
+
+                <h4>
+                  В чем отличается Iphone 14 Pro <br />
+                  от 14 ProMax ....
+                </h4>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="sloy2">
+                <img src="./public/pyatiy.jpg" alt="" />
+              </div>
+              <div class="sloy3">
+                <h3>Коротко</h3>
+
+                <h4>
+                  LG представила «невидимую» <br />
+                  автоакустику размером ...
+                </h4>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <!-- <img src="" alt=""> -->
+              <div class="sloy2">
+                <img src="./public/shestoy.png" alt="" />
+              </div>
+              <div class="sloy3">
+                <h3>Коротко</h3>
+
+                <h4>
+                  5 полезных привычек, чтобы <br />
+                  чувствовать себя лучше
+                </h4>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="sloy2">
+                <img src="./public/sedmoy.png" alt="" />
+              </div>
+              <div class="sloy3">
+                <h3>Коротко</h3>
+
+                <h4>
+                  Вышли золотые и титановые айфоны <br />
+                  к ЧМ 2022 в Катарe
+                </h4>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="sloy2">
+                <img src="./public/fosmoy.png" alt="" />
+              </div>
+              <div class="sloy3">
+                <h3>Коротко</h3>
+
+                <h4>
+                  0 лучших читалок для iPhone: какие <br />
+                  приложения установить книгоманам
+                </h4>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="sloy2">
+                <img src="./public/posledniy.jpg" alt="" />
+              </div>
+              <div class="sloy3">
+                <h3>Коротко</h3>
+
+                <h4>
+                  Ученые создали мягкого и <br />
+                  быстрого робота-ската
+                </h4>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="swiper-pagination"></div> -->
+        </div>
+      </div>
+      <!-- products -->
       <div class="products"></div>
+      <!-- products -->
       <div class="marat">
         <p class="p1">Популярные бренды</p>
         <div class="blocks_1">
@@ -290,5 +451,7 @@
     ></script>
     <script type="module" src="./modules/layout.js"></script>
     <script type="module" src="./index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+    <script src="./modules/layout.js"></script>
   </body>
 </html>
