--- a/pages/cart.html
+++ b/pages/cart.html
@@ -166,6 +166,7 @@
       </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../modules/card.js"></script>
   </body>
 </html>
