--- a/productid.html
+++ b/productid.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="price-block">
                         <p class="priceTobuy"></p>
-                        <button class="def-btn">Добавить в корзину</button>
+                        <button class="def-btn toCart">Добавить в корзину</button>
                     </div>
                     <div class="found_cheaper">Нашли дешевле?</div>
                     <div class="cash_back">
