last changes search working now

--- a/productid.html
+++ b/productid.html
@@ -8,10 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <header>
-
-    </header>
+    <header></header>
     <main>
         <div class="product">
             <div class="bitchsukablyat">
